test/expected/explain_swt.out
explain signed wchar_t x
               ^
16: error: "signed wchar_t" is illegal for built-in type
